--- a/example_problems/buffer_overflow/04_smash_the_stack/Makefile
+++ b/example_problems/buffer_overflow/04_smash_the_stack/Makefile
@@ -1,4 +1,4 @@
-CFLAGS := -w -g -fno-stack-protector -z execstack
+CFLAGS := -w -O0 -g -fno-stack-protector -z execstack
 
 
 all:
@@ -6,6 +6,9 @@ all:
 
 host:
 	socat TCP4-LISTEN:4003,fork,reuseaddr exec:./basic &
+
+install:
+	cp basic static/
 
 clean:
 	rm -f basic
